# scavnet

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  Settings.toml
src/: main.rs
src/scavnet/: director.rs  fft.rs  interface.rs  mod.rs  networks.rs  scanner.rs  settings.rs  system.rs  time.rs
src/scavnet/interfaces/: main.rs  mod.rs
src/scavnet/interfaces/components/: mod.rs  scanner.rs  signal.rs  system.rs  titlebar.rs
src/scavnet/transmission/: core.rs  library.rs  mod.rs  queue.rs  sets.rs
src/scavnet/transmission/interfaces/: core.rs  localfilesystem.rs  mod.rs  openai.rs
test/data/: networks.yaml
