[package]
name = "scavnet"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
config = "0.15.5"
cpal = "^0.15.3"
crossterm = "0.28.1"
futures = "0.3.17"
hound = "3.4.0"
lazy_static = "1.5.0"
openai_api_rust = "0.1.9"
parking_lot = "0.12.3"
quanta = "0.12.5"
rand = "0.8"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
rayon = "1.10.0"
rodio = {version = "0.20.1", features = ["noise"]}
serde = "1.0.216"
serde_derive = "1.0.216"
serde_yaml = "0.9.34"
spectrum-analyzer = "1.6.0"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
walkdir = "2.5.0"
rmp-serde = "1.0"
openai_dive = "0.7.1"
uuid = { version = "1.11.1", features = ["v4"] }

[profile.release]
lto = true
opt-level = 3
